# sample_code

./: .env  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  __init__.py  env.sample  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  sample.env  sample_script.py  settings.py
app/: config.py  main.py  run.py
app/utils/: db_utils.py  time_utils.py
dao/: __init__.py  _base_mongo.py  audit.py  reporting.py  usage.py
src/create_report/: cli.py  create_report.py  settings.py  utils.py
tests/: conftest.py  test_audit.py  test_main.py  test_report.py  test_usage.py  test_utils.py
